# projeto_final_soe

./: CMakeLists.txt  README.md
includes/: button.hpp  color.hpp  lcd.hpp  util.hpp
src/: button.cpp  color.cpp  lcd.cpp  main.cpp  util.cpp
